--- a/app/src/main/res/layout/activity_roll.xml
+++ b/app/src/main/res/layout/activity_roll.xml
@@ -24,4 +24,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_roll__imgDado" />
+
+    <Button
+        android:id="@+id/activity_roll__btnVerifica"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/verify"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_roll__tvNumber" />
 </androidx.constraintlayout.widget.ConstraintLayout>
